--- a/HCRepository/HCRepository.csproj
+++ b/HCRepository/HCRepository.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Patient.cs">
       <DependentUpon>HealthCareSolution.tt</DependentUpon>
     </Compile>
+    <Compile Include="PatientRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResParty.cs">
       <DependentUpon>HealthCareSolution.tt</DependentUpon>
