Get and Post of Patient End to End

--- a/HCAPI/Web.config
+++ b/HCAPI/Web.config
@@ -1,9 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <connectionStrings>
+    <add name="HealthCareEntities" connectionString="metadata=res://*/HealthCareSolution.csdl|res://*/HealthCareSolution.ssdl|res://*/HealthCareSolution.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=HealthCare;persist security info=True;user id=sa;password=Tr0y@brad;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -16,7 +19,7 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-        <directoryBrowse enabled="true" />
+    <directoryBrowse enabled="true" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -40,4 +43,5 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+
 </configuration>
