--- a/HCAPI/HCAPI.csproj
+++ b/HCAPI/HCAPI.csproj
@@ -44,6 +44,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -116,9 +124,17 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\HCContract\HCContract.csproj">
+      <Project>{f1ea72bb-48a4-4cf7-ab35-593ea41bffd5}</Project>
+      <Name>HCContract</Name>
+    </ProjectReference>
     <ProjectReference Include="..\HCDTO\HCDTO.csproj">
       <Project>{2a1ae394-840e-47c5-ba76-57777c720a7f}</Project>
       <Name>HCDTO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HCManager\HCManager.csproj">
+      <Project>{dd1d907c-43c0-46fd-b1d9-af69efb44ac0}</Project>
+      <Name>HCManager</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
