--- a/HCRepository/HCRepository.csproj
+++ b/HCRepository/HCRepository.csproj
@@ -106,6 +106,12 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HCContract\HCContract.csproj">
+      <Project>{f1ea72bb-48a4-4cf7-ab35-593ea41bffd5}</Project>
+      <Name>HCContract</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
