--- a/APM/package.json
+++ b/APM/package.json
@@ -15,21 +15,21 @@
   "license": "ISC",
   "dependencies": {
     "@angular/animations": "^4.4.4",
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
+    "@angular/common": "4.4.4",
+    "@angular/compiler": "4.4.4",
+    "@angular/core": "4.4.4",
+    "@angular/forms": "4.4.4",
+    "@angular/http": "4.4.4",
+    "@angular/platform-browser": "4.4.4",
+    "@angular/platform-browser-dynamic": "4.4.4",
+    "@angular/router": "4.4.4",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.4.3",
     "systemjs": "0.19.27",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@types/jquery": "^3.2.10",
